[package]
name = "gotv-plus-cloudflare"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.163"
serde_json = "1.0.96"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
